--- a/index.html
+++ b/index.html
@@ -1,96 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Qadeer Website</title>
-  <style>
-    body {
-      background-image: url("https://wallpapercave.com/w/wp14551111.jpg");
-      background-size: cover;
-      margin: 0;
-      height: 100vh;
-      color: white;
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    /* Logo */
-    .logo {
-      width: 130px;
-      height: 130px;
-      border-radius: 50%;
-      border: 3px solid #fff;
-      object-fit: cover;
-      margin-top: 20px;
-    }
-
-    /* Buttons */
-    .button {
-      width: 220px;
-      height: 50px;
-      margin: 12px 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-weight: bold;
-      text-decoration: none;
-      color: white;
-      border-radius: 10px;
-      position: relative;
-      background: linear-gradient(0deg, #000, #272727);
-    }
-
-    .button:before, .button:after {
-      content: '';
-      position: absolute;
-      left: -2px;
-      top: -2px;
-      border-radius: 10px;
-      background: linear-gradient(45deg, #ffffff, #ffffff, #000000, #000000, #000000);
-      background-size: 400%;
-      width: calc(100% + 4px);
-      height: calc(100% + 4px);
-      z-index: -1;
-      animation: steam 10s linear infinite;
-    }
-    .button:after { filter: blur(50px); }
-
-    @keyframes steam {
-      0% { background-position: 0 0; }
-      50% { background-position: 400% 0; }
-      100% { background-position: 0 0; }
-    }
-
-    footer {
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      background: rgba(0,0,0,0.7);
-      color: #fff;
-      text-align: center;
-      padding: 10px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>VIP Code Editor</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Logo -->
-  <img src="Qadeer/khan.png" alt="Logo" class="logo">
-
-  <a href="deploy.html" class="button">DEPLOY</a>
-  <a href="session.html" class="button">GET SESSION</a>
-  <a href="YOUR_OWNER_LINK" class="button">CONTACT OWNER</a>
-  <a href="YOUR_GITHUB_LINK" class="button">SUPPORT GITHUB</a>
-  <a href="YOUR_CHANNEL_LINK" class="button">FOLLOW CHANNEL</a>
-
-  <footer>
-    QADEER WEBSITE &copy; <span id="year"></span>
-  </footer>
-
-  <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
+    <div class="main-container">
+        <h1>🚀 Mera VIP Code Editor</h1>
+        <p>Apna workflow select karein:</p>
+        <div class="button-group">
+            <a href="separate-editor.html" class="btn">HTML, CSS, JS (Alag Alag)</a>
+            <a href="single-editor.html" class="btn">Sab Code Ek File Mein</a>
+        </div>
+    </div>
 </body>
 </html>
